--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,6 +1,8 @@
 fixtures:
   repositories:
-    "stdlib": "git://github.com/puppetlabs/puppetlabs-stdlib.git"
-    "vmware": "git://github.com/ghoneycutt/puppet-module-vmware.git"
+    'stdlib':
+      repo: 'git://github.com/puppetlabs/puppetlabs-stdlib.git'
+      ref: '3.2.0'
+    'vmware': 'git://github.com/ghoneycutt/puppet-module-vmware.git'
   symlinks:
-    "virtual": "#{source_dir}"
+    'virtual': "#{source_dir}"
